# PyTorch-FoodVision-Mini

./: .gitignore  README.md  app_fastapi.py  app_flask.py  predict.py  pyproject.toml  requirements.txt  train.py
food_vision/: engine.py  model_builder.py  predict.py  utils.py
static/: style.css
static/css/: style.css
static/js/: main.js
templates/: index.html  result.html
webapp/: config.py  logic.py  state.py  utils.py
