[project]
name = "pytorch-foodvision-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "tensorboard>=2.20.0",
    "torch>=1.12.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.13.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
